--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   </head>
 
   <body>
+    <main id="main-doc">
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+  
+    </main>
+
+
+
+
+
+    
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
