--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
   </head>
 
   <body>
+
     <main id="main-doc">
-    <section class="main-section"></section>
-    <section class="main-section"></section>
-    <section class="main-section"></section>
-    <section class="main-section"></section>
-    <section class="main-section"></section>
+      
+      <section id="Basketball" class="main-section">
+        <h1> Basketball </h1>
+      </section>
+
+      <section id="Soccer"  class="main-section">
+        <h1> Soccer </h1>
+      </section>
+
+      <section id="Swimming"  class="main-section">
+        <h1> Swimming </h1>
+      </section>
+
+      <section id="Baseball"  class="main-section">
+        <h1> Baseball </h1>
+      </section>
+
+      <section id="Football"  class="main-section">
+        <h1> Football </h1>
+      </section>
   
     </main>
 
