--- a/index.html
+++ b/index.html
@@ -10,24 +10,57 @@
 
     <main id="main-doc">
       
-      <section id="Basketball" class="main-section">
-        <h1> Basketball </h1>
+      <section id="Javascript" class="main-section">
+        <h1> Javascript </h1>
+        <p>Often abbreviated as JS, is a high-level, just-in-time compiled,</p>
+        <p>Object-oriented programming language that conforms to the ECMAScript specification</p>
+        <code>
+          var a = 1; 
+          var b = 2; 
+          var sum = a+b;
+        </code>
       </section>
 
-      <section id="Soccer"  class="main-section">
-        <h1> Soccer </h1>
+      <section id="Java"  class="main-section">
+        <h1> Java </h1>
+        <p>Java is a general-purpose programming language that is class-based, object-oriented</p>
+        <p>And designed to have as few implementation dependencies as possible</p>
+        <code>
+            int a = 1; 
+            int b = 2; 
+            int sum = a+b;
+          </code> 
       </section>
 
-      <section id="Swimming"  class="main-section">
-        <h1> Swimming </h1>
+      <section id="PHP"  class="main-section">
+        <h1> PHP </h1>
+        <p>PHP is a general-purpose programming language originally designed for web development. </p>
+        <p>The PHP reference implementation is now produced by The PHP Group.</p>
+        <code>
+            $a = 1; 
+            $b = 2; 
+            $sum = $a+$b;
+          </code>
       </section>
 
-      <section id="Baseball"  class="main-section">
-        <h1> Baseball </h1>
+      <section id="C++"  class="main-section">
+        <h1> C++ </h1>
+        <p>Is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language</p>
+        <p>The language has expanded significantly over time, and modern C++ has object-oriented, generic, and </p>
+        <code>
+            int a = 1; 
+            int b = 2; 
+            int sum = a+b;
+          </code>
       </section>
 
-      <section id="Football"  class="main-section">
-        <h1> Football </h1>
+      <section id="Sql"  class="main-section">
+        <h1> Sql </h1>
+        <p>Is a domain-specific language used in programming and designed for managing data held in a relational database management system</p>
+        <p>Or for stream processing in a relational data stream management system (RDSMS)</p>
+        <code>
+            select * from users where id = 2;
+          </code>
       </section>
   
     </main>
