--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body>
 
+    <nav id="navbar">
+
+    </nav>
     <main id="main-doc">
       
       <section id="Javascript" class="main-section">
@@ -19,6 +22,10 @@
           var b = 2; 
           var sum = a+b;
         </code>
+        <h2>Libraries</h2>
+        <ul>
+          <li>JQuery</li>
+        </ul>
       </section>
 
       <section id="Java"  class="main-section">
@@ -29,7 +36,7 @@
             int a = 1; 
             int b = 2; 
             int sum = a+b;
-          </code> 
+        </code>   
       </section>
 
       <section id="PHP"  class="main-section">
@@ -40,7 +47,11 @@
             $a = 1; 
             $b = 2; 
             $sum = $a+$b;
-          </code>
+        </code>
+        <h2>Libraries</h2>
+        <ul>
+            <li>Laravel</li>
+        </ul>
       </section>
 
       <section id="C++"  class="main-section">
@@ -51,7 +62,11 @@
             int a = 1; 
             int b = 2; 
             int sum = a+b;
-          </code>
+        </code>
+        <h2>Libraries</h2>
+        <ul>
+            <li>Math</li>
+        </ul>
       </section>
 
       <section id="Sql"  class="main-section">
@@ -60,7 +75,11 @@
         <p>Or for stream processing in a relational data stream management system (RDSMS)</p>
         <code>
             select * from users where id = 2;
-          </code>
+        </code>
+        <h2>Servers</h2>
+        <ul>
+            <li>SQL SERVER</li>
+        </ul>
       </section>
   
     </main>
